Inserito file js

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>js-pwdgen-wannabe</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
-  <script src="assets/js/main.js" charset="utf-8"></script>
+  <h1></h1>
+  <p></p>
+  <p id="result">Risultato</p>
+
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
