Completato il Java

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
 
-  <h1></h1>
-  <p></p>
-  <p id="result">Risultato</p>
+  <h1>ECCO LA TUA SPLENDIDA PASSWORD PER NULLA SICURA.....</h1>
+  <p id="result"></p>
 
   <script src="assets/js/main.js"></script>
 </body>
