--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>js-pwdgen-wannabe</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
+  <div class="result">
   <h1>ECCO LA TUA SPLENDIDA PASSWORD PER NULLA SICURA.....</h1>
   <p id="result"></p>
+  </div>
 
   <script src="assets/js/main.js"></script>
 </body>
